# spark_lab7

./: cluster.py  config.yaml  datamart.ipynb  docker-compose.yml  input.txt  pyproject.toml
datamart/src/main/scala/: DataMart.scala
datamart/src/main/scala/db/: DbConnection.scala
